make-a-wish-salesforce/src/objects/Loop__DDP_File__c.object
<CustomObject>
    <description>Files for DocGen Packages</description>
    <fields>
        <fullName>Loop__Advanced_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Advanced_Section__c</fullName>
        <label>Advanced Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included If</fullName>
                    <default>true</default>
                    <label>Included If</label>
                </value>
                <value>
                    <fullName>Excluded If</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Bookmark__c</fullName>
        <label>Bookmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Compare_Field__c</fullName>
        <label>Compare Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Compare_Type__c</fullName>
        <label>Compare Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal</fullName>
                </value>
                <value>
                    <fullName>startswith</fullName>
                </value>
                <value>
                    <fullName>endswith</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less</fullName>
                </value>
                <value>
                    <fullName>greater</fullName>
                </value>
                <value>
                    <fullName>less equal</fullName>
                </value>
                <value>
                    <fullName>greater equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Compare_Value__c</fullName>
        <label>Compare Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>DocGen Package</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipLabel>DocGen Package Templates</relationshipLabel>
        <relationshipName>DDP_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Document_ID__c</fullName>
        <label>Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Email_As__c</fullName>
        <label>Email As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                    <default>true</default>
                    <label>Attachment</label>
                </value>
                <value>
                    <fullName>Email Body</fullName>
                </value>
                <value>
                    <fullName>Email Body and Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Excel_Print_Titles__c</fullName>
        <inlineHelpText>Example: Sheet1!A:B; Sheet1!2:3; Sheet2!1:4; Sheet Three!A:A</inlineHelpText>
        <label>Excel Print Titles</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Excel_Sheets_Option__c</fullName>
        <label>Excel Sheets Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Excel_Sheets__c</fullName>
        <inlineHelpText>This is a comma delimited list of Excel Sheet names to include in the output of this file.</inlineHelpText>
        <label>Excel Sheets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__File_Operations__c</fullName>
        <inlineHelpText>This is a JSON list of operations and their arguments to be performed on this file. Contact Drawloop for more information on this feature.</inlineHelpText>
        <label>File Operations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__First_Page__c</fullName>
        <defaultValue>1</defaultValue>
        <label>First Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Last_Page__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Last Page</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Long_Name__c</fullName>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Merge_with_Previous__c</fullName>
        <description>Specifies whether or how the original files should be merged together. Options for Word are Page, Continuous, Section Page, Paragraph, Even, Odd, Line, Column, Clear Left, Clear Right, Text Wrap, None.</description>
        <label>Merge with Previous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Pause_to_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pause to Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__ReportIds__c</fullName>
        <label>ReportIds</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Section_Label__c</fullName>
        <label>Section Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Skip_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only use this option if your document is static, i.e. there is no data being merged into this document.</inlineHelpText>
        <label>Skip Document Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Sort_with_Previous__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this file can be re-ordered with the previous file by the user on the DDP selection page.</inlineHelpText>
        <label>Sort with Previous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Type2__c</fullName>
        <label>Type2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Vf_Parameters__c</fullName>
        <label>Vf Parameters</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Visualforce_Content_Output_Type__c</fullName>
        <description>This field determines the desired file type of the output document generated from a Visualforce template.</description>
        <label>Visualforce Content Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                    <default>true</default>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>Word</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DocGen Package Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocGen Package Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>